syntax = "proto3";

package go.micro.srv.GetUserInfo;

service Example {
	rpc GetUserInfo(Request) returns (Response) {}

}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
}

message Response {
	//"errno": "0" ,
	string Errno = 1;

	//"errmsg": "成功",
	string Errmsg = 2;

	//"user_id": 1,
	string User_id = 3;

	//"name": "Panda",
	string Name = 4;

	//"mobile": "110",
	string Mobile = 5;

	//"real_name": "熊猫",
	string Real_name = 6;

	//"id_card": "210112244556677",
	string Id_card = 7;

	//"avatar_url": "http://101.200.170.171:9998/group1/M00/00/00/Zciqq1n7It2ANn1dAADexS5wJKs808.png"
	string Avatar_url = 8;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
