syntax = "proto3";

package go.micro.srv.PostUserAuth;

service Example {
	rpc PostUserAuth(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
	string Real_name = 2;
	string Id_card = 3;
}

message Response {
	string Error = 1;
	string Errmsg = 2;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
